diplom/k8s-configs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
  namespace: ssilchin-nginx
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  selector:
    app: test-nginx
